log
Thu 16 May 2024 10:11:55 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
076576e
Sat 18 May 2024 02:06:26 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:82:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
   82 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
b7afb40
Sat 18 May 2024 02:08:53 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
891fc44
